# core

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml  pyrefly.toml  requirements.txt  shared_logger.py
.github/: dependabot.yml
cio/: main.py
data/: alpha_signal_20260301.md  alpha_signal_20260302.md  alpha_signal_20260303.md  alpha_signal_20260304.md  alpha_signal_20260305.md  alpha_signal_20260306.md  alpha_signal_20260324.md  alpha_signal_20260325.md  alpha_signal_20260326.md  alpha_signal_20260327.md  alpha_signal_20260328.md  alpha_signal_20260331.md  alpha_signal_20260401.md  alpha_signal_20260402.md  alpha_signal_20260403.md  alpha_signal_20260404.md  alpha_signal_20260407.md  alpha_signal_20260408.md  alpha_signal_20260409.md  alpha_signal_20260410.md  alpha_signal_20260411.md  alpha_signal_20260414.md  alpha_signal_20260415.md  alpha_signal_20260416.md  alpha_signal_20260417.md  alpha_signal_20260418.md  alpha_signal_20260421.md  alpha_signal_20260422.md  alpha_signal_20260423.md  alpha_signal_20260424.md  alpha_signal_20260427.md  alpha_signal_20260429.md  alpha_signal_20260430.md  alpha_signal_20260501.md  alpha_signal_20260504.md  alpha_signal_20260505.md  alpha_signal_20260505_en.md  alpha_signal_20260506.md  alpha_signal_20260506_en.md  alpha_signal_20260507.md  (+49 more)
extractor/: main.py  prompts.py
financial_sieve/: main.py  requirements.txt
scripts/: alphasignals-core-full.sh  buddy-core-full.sh  buddy-core-incremental.sh  buddy-core-premarket.sh
shared/: default_translation_rules.json  env_utils.py  time_utils.py
sorter/: main.py
(+25 files in other folders)
