[project]
name = "core"
version = "0.3.0"
description = "An automated, multi-agent intelligence system for investment research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "sentence-transformers",
    "transformers",
    "huggingface-hub",
    "pytz",
    "holidays",
    "python-dateutil",
    "schedule",
    "feedparser",
    "requests",
    "cloudscraper",
    "trafilatura",
    "types-pytz",
    "types-requests",
]

[tool.uv]
package = false
